<resources>
    <string name="app_name">Shadow Drawable</string>
    <string name="lorem_ipsum" >The position parameter indicates where a given page is located relative to the center of the screen. It is a dynamic property that changes as the user scrolls through the pages. When a page fills the screen, its position value is 0. When a page is drawn just off the right side of the screen, its position value is 1. If the user scrolls halfway between pages one and two, page one has a position of -0.5 and page two has a position of 0.5. Based on the position of the pages on the screen, you can create custom slide animations by setting page properties with methods such as setAlpha(), setTranslationX(), or setScaleY().</string>
    <string name="license">http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an AS IS BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="change_shadow_alpha">change shadow alpha</string>
    <string name="change_shadow_width">change shadow width</string>
    <string name="view_shadow">View Shadow</string>
    <string name="viewgroup_shadow">ViewGroup Shadow</string>
</resources>
