<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/fl_root"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
tools:context="cn.kevin.sample.SampleActivity">

<FrameLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:fadeScrollbars="false"
        android:scrollbarSize="20dp"
        android:layout_width="200dp"
        android:layout_height="100dp">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/license" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Hello World!" />
</FrameLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/bt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="openColorPickerDialog"
        android:text="@string/view_shadow"
        android:textAllCaps="false"
        android:textSize="12sp" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:onClick="openColorPickerDialog"
        android:text="@string/viewgroup_shadow"
        android:textAllCaps="false"
        android:textSize="12sp" />

</LinearLayout>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/change_shadow_alpha" />

<SeekBar
    android:id="@+id/sb_change_alpha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:max="0xFF" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/change_shadow_width" />

<SeekBar
    android:id="@+id/sb_change_width"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:max="20" />

</LinearLayout>

